--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "api":"json-server --watch ./db/players-db.json"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "date-fns": "^2.30.0",
+    "json-server": "^0.17.4",
     "rxjs": "^7.8.1"
   }
 }
